Applying code review suggestions